Fix deployment health check issues: bind to 0.0.0.0, enhance logging, improve Docker config

--- a/triage-agent/Dockerfile
+++ b/triage-agent/Dockerfile
@@ -1,6 +1,9 @@
 # Dockerfile for Triage.AI Agent
 FROM node:18-alpine
 
+# Install curl for health checks
+RUN apk add --no-cache curl
+
 # Set working directory
 WORKDIR /app
 
@@ -13,18 +16,22 @@ RUN npm ci --only=production
 # Copy source code
 COPY src/ ./src/
 COPY agent.yaml ./
+COPY start.js ./
 
 # Create non-root user for security
 RUN addgroup -g 1001 -S nodejs
 RUN adduser -S nodeuser -u 1001
+
+# Change ownership of the app directory to nodeuser
+RUN chown -R nodeuser:nodejs /app
 USER nodeuser
 
-# Expose port
-EXPOSE 3001
+# Expose port (use environment variable for flexibility)
+EXPOSE ${PORT:-3001}
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:3001/health || exit 1
+# Health check with better configuration
+HEALTHCHECK --interval=15s --timeout=5s --start-period=10s --retries=3 \
+  CMD curl -f http://0.0.0.0:${PORT:-3001}/health || exit 1
 
 # Start the application
 CMD ["npm", "start"]
